--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "fxgrid",
-  "version": "1.0.0",
-  "description": "Minimalist Flexbox grid system",
+  "version": "0.1.0",
+  "description": "Flexbox grid system",
+  "scss": "scss/fxgrid.scss",
   "main": "index.js",
-  "author": "Sri Aspari",
+  "author": "Sri Aspari <sri.aspari@pm.me>",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/siarie/fxgrid.git"
+  },
+  "keywords": [
+    "flexbox",
+    "scss",
+    "grid"
+  ],
+  "bugs": {
+    "url": "https://github.com/siarie/fxgrid/issues"
+  },
   "license": "MIT",
   "scripts": {
-    "build:fxgrid": "gulp",
-    "build:docs": "gulp docs"
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "devDependencies": {
-    "autoprefixer": "^10.1.0",
-    "cssnano": "^4.1.10",
     "del": "^6.0.0",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "gulp": "^4.0.2",
-    "gulp-postcss": "^9.0.0",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "postcss": "^8.2.1"
+    "gulp-sourcemaps": "^3.0.0"
   },
   "browserslist": [
     ">1%",
