--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "fxgrid",
-  "version": "0.2.0",
-  "description": "Flexbox grid system",
-  "scss": "scss/fxgrid.scss",
-  "main": "index.js",
-  "author": "Sri Aspari <sri.aspari@pm.me>",
+  "version": "1.0.0",
+  "description": "Simple CSS grid framework based on flexbox",
+  "main": "fxgrid.scss",
+  "style": "css/fxgrid.css",
+  "unpkg": "css/fxgrid.min.css",
+  "author": {
+    "name": "Sri Aspari",
+    "email": "mail@siarie.me",
+    "url": "https://siarie.me"
+  },
   "repository": {
     "type": "git",
-    "url": "git://github.com/siarie/fxgrid.git"
+    "url": "git+https://github.com/siarie/fxgrid.git"
   },
   "keywords": [
     "flexbox",
@@ -19,23 +24,28 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "gulp build",
-    "watch": "gulp watch"
+    "build": "yarn build:scss && yarn build:autoprefix && yarn build:cssnano",
+    "build:scss": "sass --source-map fxgrid.scss css/fxgrid.css",
+    "build:autoprefix": "postcss --use autoprefixer -o css/fxgrid.css css/fxgrid.css",
+    "build:cssnano": "postcss --use cssnano -o css/fxgrid.min.css css/fxgrid.css",
+    "clean": "rimraf css",
+    "watch": "yarn build:scss --watch"
   },
   "devDependencies": {
-    "del": "^6.0.0",
-    "eslint": "^7.15.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-dart-sass": "^1.0.2",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0"
+    "autoprefixer": "^10.3.2",
+    "cssnano": "^5.0.8",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
+    "rimraf": "^3.0.2",
+    "sass": "^1.38.1"
   },
   "browserslist": [
-    ">1%",
-    "last 8 versions"
+    "last 4 versions"
+  ],
+  "files": [
+    "css",
+    "fxgrid.scss",
+    "LICENSE",
+    "README.md"
   ]
 }
